--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-    "name": "the-shell",
-    "description" : "Simple theme for Ghost. Pure CSS. Web Safe fonts.",
+    "name": "the-shell-revamped",
+    "description" : "Revamped version of The-Shell theme for Ghost.",
     "demo": "https://demo.ghost.io",
-    "version": "0.1.1",
+    "version": "0.0.1",
     "engines": {
-        "ghost": ">=0.4.0 <1.0.0"
+        "ghost": ">=0.4.0 <=1.0.0"
     },
     "license": "MIT",
-    "screenshots": {
-        "desktop": "assets/screenshot-desktop.jpg",
-        "mobile": "assets/screenshot-mobile.jpg"
-    },
     "author": {
-        "name": "Dmitry Lebedev",
-        "email": "mityalebedev@me.com",
-        "url": "https://dmitrylebedev.me"
+        "name": "Patrick Jung",
+        "email": "patrick.pddstudio@gmail.com",
+        "url": "https://pddstudio.io"
     },
     "gpm": {
         "type": "theme",
@@ -29,8 +25,14 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/mityalebedev/The-Shell.git"
+        "url": "https://github.com/pddstudio/the-shell-revamped.git"
     },
-    "bugs": "https://github.com/mityalebedev/The-Shell/issues",
-    "contributors": "https://github.com/mityalebedev/The-Shell/graphs/contributors"
+    "bugs": "https://github.com/pddstudio/the-shell-revamped/issues",
+    "contributors": [
+        {
+            "name": "Dmitry Lebedev",
+            "email": "mityalebedev@me.com",
+            "url": "https://dmitrylebedev.me"
+        }
+    ]
 }
